# kia_gd_ws

./: README.md  frames_2025-11-05_10.13.31.gv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/kia_gd/lib/kia_gd/: controlador_kia  controlador_ur5  dashboard  gemelo_ur_relay  joint_state_mapper  mtconnect_bridge  ur_path_maker  urconnect
install/kia_gd/share/kia_gd/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.sh  package.xml
install/ros_tcp_endpoint/share/ros_tcp_endpoint/: package.sh
install/simple_ur10e_description/share/simple_ur10e_description/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/simple_ur10e_moveit_config/share/simple_ur10e_moveit_config/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ur/share/ur/: package.sh
install/ur_bringup/share/ur_bringup/: local_setup.sh  package.sh
install/ur_calibration/lib/ur_calibration/: calibration_correction
install/ur_calibration/share/ur_calibration/: package.sh
install/ur_controllers/share/ur_controllers/: local_setup.sh  package.sh
install/ur_dashboard_msgs/share/ur_dashboard_msgs/: package.sh
log/: latest_build
src/kia_gd/: CMakeLists.txt
src/kia_gd/data/: CourseProjectData.xlsx
src/kia_gd/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/kia_gd/install/kia_gd/share/ament_index/resource_index/package_run_dependencies/: kia_gd
src/kia_gd/install/kia_gd/share/kia_gd/: local_setup.sh  package.bash  package.ps1  package.sh  package.zsh
src/kia_gd/install/kia_gd/share/kia_gd/cmake/: kia_gdConfig.cmake
src/kia_gd/launch/: launch.py  master_launch.py  master_launch2.py  ur_control2.launch.py
src/kia_gd/log/: latest_build
src/kia_gd/meshes/: Base_m_ascii.STL  J1.dae  J1.stl  J4.stl  KIA_CAD.stl
src/kia_gd/meshes/install/: setup.ps1  setup.sh
src/kia_gd/meshes/log/: latest_build
src/kia_gd/rviz/: visualizacion2.rviz
src/kia_gd/scripts/: controlador_kia.py  mtconnect_bridge.py  recibidor_kia.py
src/kia_gd/urdf/: ur5.urdf
src/kia_gd/urdf/install/: setup.sh
(+1151 files in other folders)
